--- a/app.json
+++ b/app.json
@@ -5,8 +5,6 @@
     "name": "minroob",
     "slug": "minroob",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"]
   }
 }
